--- a/src/style.css
+++ b/src/style.css
@@ -4,16 +4,17 @@
 
 .item {
   margin-bottom: 33px;
-  
+
   &__title {
     margin-bottom: 16px;
   }
-  
+
   &__desc {
     line-height: var(--ui-heading-line-height);
 
     @media (min-width: 768px) {
-      padding: 0 40px;
+      padding-right: 40px;
+      padding-left: 40px;
     }
   }
 }
