--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@
     transform: translateX(-50%);
     width: 45px;
     height: 2px;
-    background-color: var(--ui-block-title-color);
+    background-color: currentColor;
   }
 }
 
@@ -43,22 +43,20 @@
     padding-left: 15px;
     padding-right: 15px;
   }
+}
 
-  &__picture {
-    min-height: 100px;
-  }
-
-  &__picture-wrapper {
-    width: 100%;
-    text-align: center;
-  }
+.logo {
+  display: block;
+  width: 100%;
+  text-align: center;
 
   &__image {
     display: inline-block;
-    width: 150px;
+    max-width: 150px;
+    height: auto;
 
     @media (min-width: 768px) {
-      width: auto;
+      max-width: 175px;
     }
   }
 }
