--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,75 @@
 @import "wireframe-zapdos-awards/src/style.css";
 
 /* start here */
+
+.section {
+
+  @media (min-width: 992px) {
+    padding-top: 185px;
+    padding-bottom: 230px;
+  }
+
+  &__inner {
+
+    @media (min-width: 1200px) {
+      max-width: none;
+      padding: 0;
+    }
+  }
+}
+
+.title {
+  text-transform: uppercase;
+
+  @media (min-width: 992px) {
+    margin-bottom: 60px;
+  }
+}
+
+.item {
+
+  @media (min-width: 992px) {
+    flex-basis: 25%;
+    max-width: 25%;
+  }
+
+  @media (min-width: 1200px) {
+    flex-basis: 12.5%;
+    max-width: 12.5%;
+  }
+
+  &__picture-wrapper {
+    width: 155px;
+    height: 155px;
+    margin: 0 auto;
+  }
+
+  &__picture {
+    position: relative;
+    width: 155px;
+    height: 155px;
+    background-color: transparent;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 50%;
+      background-color: var(--ui-light-shade-color);
+      opacity: 0.1;
+    }
+  }
+
+  &__image {
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: contain;
+  }
+}
