--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,91 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-series-2-cta/src/style.css";
 
 /* start here */
+
+.section {
+  padding: 100px 0;
+
+  &__inner {
+    border-radius: 7px;
+
+    @media (min-width: 768px) {
+      max-width: 570px;
+    }
+  }
+
+  &__header {
+
+    @media (min-width: 480px) {
+      padding: 9% 70px 0;
+    }
+  }
+}
+
+.title {
+  position: relative;
+  margin-bottom: 33px;
+  text-transform: uppercase;
+  letter-spacing: 2.8px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 22px;
+    height: 3px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -25px;
+    background-color: var(--ui-brand-color);
+  }
+}
+
+.subtitle {
+  font-size: var(--ui-subtitle-size);
+}
+
+.form {
+
+  @media (min-width: 480px) {
+    padding: 0 70px 8%;
+  }
+
+  &__item {
+    position: relative;
+    margin-bottom: 14px;
+
+    &:last-of-type {
+      margin-bottom: 35px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 100%;
+      bottom: 0;
+      opacity: 0.3;
+      background-color: var(--ui-quote-color);
+    }
+  }
+
+  &__field {
+    position: relative;
+    height: 58px;
+    padding: 0 9px;
+    font-weight: var(--ui-text-font-weight);
+    font-size: calc( var(--ui-text-size) * 18/16 );
+    background-color: transparent;
+    color: var(--ui-text-color);
+
+    &::placeholder {
+      color: var(--ui-text-color);
+    }
+  }
+
+  &__button {
+
+    @media (min-width: 768px) {
+      width: auto;
+    }
+  }
+}
