--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
   &__inner {
 
     @media (min-width: 1200px) {
-      max-width: none;
+      max-width: 1920px;
       padding: 0;
     }
   }
@@ -26,6 +26,12 @@
   }
 }
 
+.items-wrapper {
+  margin-left: 0;
+  margin-right: 0;
+  overflow-x: hidden;
+}
+
 .item {
 
   @media (min-width: 992px) {
@@ -36,6 +42,7 @@
   @media (min-width: 1200px) {
     flex-basis: 12.5%;
     max-width: 12.5%;
+    padding: 0;
   }
 
   &__picture-wrapper {
