--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,6 @@
 
     @media (min-width: 1200px) {
       max-width: 1920px;
-      padding: 0;
     }
   }
 }
@@ -29,7 +28,6 @@
 .items-wrapper {
   margin-left: 0;
   margin-right: 0;
-  overflow-x: hidden;
 }
 
 .item {
@@ -46,15 +44,16 @@
   }
 
   &__picture-wrapper {
-    width: 155px;
-    height: 155px;
+    max-width: 185px;
+    max-height: 155px;
     margin: 0 auto;
+    padding: 0 15px;
   }
 
   &__picture {
     position: relative;
-    width: 155px;
-    height: 155px;
+    width: 100%;
+    padding-top: 100%;
     background-color: transparent;
 
     &::before {
