--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,8 @@
 .section {
 
   @media (min-width: 992px) {
-    padding: 100px 0 95px;
+    padding-top: 100px;
+    padding-bottom: 95px;
   }
 }
 
@@ -20,14 +21,20 @@
 }
 
 .item {
+
+  @media (min-width: 768px) {
+    flex-basis: 33.333333%;
+    max-width: 33.333333%;
+  }
+
   &__inner {
     padding: 0;
     border: 0;
   }
 
   &__pic {
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     border-radius: 0;
   }
 
@@ -36,9 +43,5 @@
     @media (min-width: 992px) {
       margin-bottom: 10px;
     }
-  }
-
-  &__position {
-    font-size: var(--ui-text-size);
   }
 }
