--- a/src/style.css
+++ b/src/style.css
@@ -42,32 +42,22 @@
   }
 
   &__inner {
+    border: 0;
 
     @media (min-width: 992px) {
       padding-left: 0;
       padding-right: 0;
-      border: 0;
     }
   }
 
   &__pic {
-
-    @media (min-width: 992px) {
-      width: 270px;
-      height: 270px;
-      border-radius: 0;
-    }
-  }
-
-  &__title {
-
-    @media (min-width: 992px) {
-      margin-bottom: -15px;
-    }
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
   }
 
   &__position {
-    font-size: 0;
+    display: none;
   }
 }
 
