--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,20 @@
 @import "wireframe-zapdos-cover/src/style.css";
 
 /* start here */
+.section {
+  padding-bottom: 100px;
+
+  @media (min-width: 768px) {
+    min-height: auto;
+    padding-bottom: 120px;
+  }
+
+  @media (min-width: 992px) {
+    padding-top: 270px;
+    padding-bottom: 430px;
+  }
+}
+
 .subtitle {
   font-size: var(--ui-subtitle-size);
 }
