--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@
     background-color: var(--ui-light-shade-color);
     border: 1px solid var(--ui-link-hover-color);
     margin-top: 0;
+    border-radius: 0;
   }
 
   &__button {
