--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,98 @@
 @import "wireframe-series-2-why/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 992px) {
+    padding-top: 7.55%;
+    padding-bottom: 7.29%;
+  }
+}
+
+.caption-decorator {
+  font-family: var(--ui-quote-font-family);
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2.95px;
+  margin-bottom: 11px;
+
+  @media (min-width: 992px) {
+    font-size: calc(var(--ui-text-size) * 0.866666);
+  }
+}
+
+.title {
+  font-family: var(--ui-quote-font-family);
+  text-transform: capitalize;
+  font-weight: 900;
+  position: relative;
+  margin-bottom: 63px;
+
+  &::after {
+    display: block;
+    content: "";
+    width: 70px;
+    height: 3px;
+    background-color: var(--ui-brand-color);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 25px;
+  }
+}
+
+.article {
+
+  @media (min-width: 992px) {
+    margin-bottom: 30px;
+  }
+
+  &__title {
+    font-family: var(--ui-quote-font-family);
+    font-weight: 600;
+    letter-spacing: 0.2px;
+
+    @media (min-width: 992px) {
+      margin-bottom: 15px;
+      padding-top: 25px;
+    }
+
+    &::after {
+      display: block;
+      content: "";
+      width: 30px;
+      height: 3px;
+      background-color: var(--ui-dark-shade-color);
+      opacity: .1;
+      margin: 0 auto;
+      margin-top: 12px;
+
+      @media (min-width: 768px) {
+        margin-left: 0;
+      }
+    }
+  }
+
+  &__icon {
+    text-align: center;
+    margin-bottom: 0;
+
+    @media (min-width: 768px) {
+      text-align-last: left;
+    }
+
+    @media (min-width: 992px) {
+      margin-right: 0;
+      width: 90px;
+      padding-left: 8px;
+    }
+  }
+}
+
+.btns-group {
+
+  @media (min-width: 992px) {
+    padding-top: 0;
+    margin-top: 70px;
+  }
+}
