--- a/src/style.css
+++ b/src/style.css
@@ -1,38 +1,41 @@
 @import "wireframe-zapdos-contacts/src/style.css";
 
 /* start here */
-.top-icon {
-  display: block;
-  height: 60px;
-  width: 60px;
-  background-color: #f0f6ff;
-  border-radius: 60px;
-  margin: 0 auto 30px;
 
-  svg {
-    width: 18px;
-    display: block;
-    margin: 0 auto;
+.top-icon {
+  display: flex;
+  position: relative;
+  margin: 0 auto 30px;
+  width: 60px;
+  height: 60px;
+  padding: 20px;
+  color: var(--ui-brand-color);
+
+  > svg {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--ui-dark-accent-color);
+    opacity: 0.05;
   }
 }
 
 .title {
-  font-size: var(--ui-block-title-size);
   margin-bottom: 24px;
-
-  &::after {
-    content: ".";
-    color: var(--ui-brand-color);
-  }
 }
 
 .map-wrapper {
   width: 670px;
   height: 410px;
-
-  @media (max-width: 768px) {
-    width: 100%;
-  }
 }
 
 .contacts {
@@ -40,6 +43,22 @@
   padding-left: 60px;
   padding-top: 34px;
   display: block;
+
+  &__title {
+    font-size: var(--ui-subheading-size);
+
+    &::first-child {
+      padding-top: 34px;
+    }
+  }
+
+  &__desc {
+    font-size: var(--ui-text-size);
+  }
+
+  &__list {
+    margin-bottom: 25px;
+  }
 }
 
 .contacts-list {
@@ -55,23 +74,6 @@
 
   &__item:nth-child(3) {
     margin-bottom: 0;
-  }
-
-  h3 {
-    font-size: var(--ui-sub-heading-size);
-    font-weight: var(--ui-heading-font-weight);
-    color: var(--ui-subheading-color);
-  }
-
-  p {
-    font-family: var(--ui-text-font-family);
-    font-size: var(--ui-text-size);
-    color: var(--ui-text-color);
-  }
-
-  a {
-    padding: 0;
-    text-align: left;
   }
 }
 
