--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,13 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
-.section__inner {
-  max-width: 865px;
+
+.section {
+  padding: 200px 0;
+
+  &__inner {
+    max-width: 865px;
+  }
 }
 
 .title {
