--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,87 @@
 @import "wireframe-series-1-partners/src/style.css";
 
 /* start here */
+.section {
+  &__header {
+
+    @media (min-width: 992px) {
+      margin-bottom: 64px;
+    }
+  }
+}
+
+.top-icon {
+  display: flex;
+  position: relative;
+  margin: 0 auto 34px;
+  width: 60px;
+  height: 60px;
+  padding: 20px;
+  color: var(--ui-brand-color);
+
+  > svg {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--ui-dark-accent-color);
+    opacity: 0.05;
+  }
+}
+
+.title {
+  letter-spacing: 1.8px;
+  margin-bottom: 28px;
+}
+
+.subtitle {
+  letter-spacing: 1.8px;
+}
+
+.logo {
+  width: 170px;
+}
+
+@media (min-width: 481px) {
+  .items-wrapper--column {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.item {
+  border: 0;
+  padding: 10px 15px;
+  text-align: center;
+
+  &:last-of-type {
+    padding-bottom: 15px;
+  }
+
+  @media (min-width: 481px) {
+    display: flex;
+    align-items: flex-start;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 0 0 15px;
+  }
+
+  &--logo {
+
+    @media (min-width: 768px) {
+      margin: 0 15px;
+    }
+  }
+}
+
+.btns-group {
+  padding-top: 20px;
+}
